--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-nvm-manager": "file:",
     "inquirer": "^12.5.2",
     "shelljs": "^0.9.2"
   }
