--- a/projects.json
+++ b/projects.json
@@ -5,18 +5,18 @@
       "angularCli": "11.2.12" 
     },
     {
-      "name": "Cliente A",
-      "nodeVersion": "12.22.12",
-      "angularCli": "13.3.9"
-    },
-    {
-      "name": "Cliente B",
-      "nodeVersion": "18.19.0",
-      "angularCli": "17.2.3"
-    },
-    {
-      "name": "Cliente C",
-      "nodeVersion": "20.9.0",
+      "name": "TuVistazo",
+      "nodeVersion": "22.5.1",
       "angularCli": "19.2.5"
-    }
+    },
+    {   
+      "name": "SERVIR",
+      "nodeVersion": "12.22.12",
+      "angularCli": "11.2.12" 
+    },
+    {   
+      "name": "Makon",
+      "nodeVersion": "22.5.1",
+      "angularCli": "19.2.5"
+    },
   ]
